Fix wrap

--- a/src/components/common/eventCard/_eventCard.less
+++ b/src/components/common/eventCard/_eventCard.less
@@ -2,7 +2,7 @@
     border-radius: 8px !important;
     background: initial !important;
     padding: 0 15px !important;
-    width: 320px;
+  
     .ant-card {}
     .ant-card-body {
         padding: 8px;
